# kfptest

./: README.md  kfptest.py  pyproject.toml  requirements.txt  test_component.py
examples/: example_components.py  test_chained_components.py  test_named_output_component.py  test_non_named_ouputs.py
src/kfptest/: __init__.py  core.py
