[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfptest"
version = "1.0.0"
description = "Easily run kfp components locally for testing."
readme = "README.md"
authors = [{ name = "Alex Sanchez", email = "alexjsanchez@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["kubeflow", "pipelines", "kfp", "vertex", "testing"]
dependencies = [
    "kfp >= 2.3.0",
    "docker >= 6.1.3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/ajosanchez/kfptest"
